# TPCtest-CMake

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cpp.yaml
data/: demo.tbl  part.tbl  partsupp.tbl  supplier.tbl
docs/: old_README.md
docs/help/: DataType.cpp  creatTable.sql  sql执行顺序.md
docs/query/: all.sql  query1.sql  query10.sql  query11.sql  query12.sql  query13.sql  query14.sql  query15.sql  query16.sql  query17.sql  query18.sql  query19.sql  query2.sql  query20.sql  query21.sql  query22.sql  query3.sql  query4.sql  query5.sql  query6.sql  query7.sql  query8.sql  query9.sql
include/: Structs.h  Table.h  Tool.h
jit/: compile_bc.py  run_bc.py
scripts/: psql.sh  splitSQL.py
src/: main.cpp
tests/: CMakeLists.txt  q1.cpp  q10.cpp  q11.cpp  q12.cpp  q13.cpp  q16.cpp  q17.cpp  q18.cpp  q19.cpp  q2.cpp  q20.cpp  q21.cpp  q22.cpp  q3.cpp  q4.cpp  q5.cpp  q6.cpp  q7.cpp  q8.cpp  q9.cpp
